[gd_scene load_steps=2 format=3 uid="uid://d3w0n2usetb3q"]

[ext_resource type="Script" path="res://StartMenu.gd" id="1_hjox6"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hjox6")

[node name="EndScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -69.0
offset_right = 75.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="EndScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EndScreen/MarginContainer"]
layout_mode = 2

[node name="YouWon" type="Label" parent="EndScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You Won!!!"
horizontal_alignment = 1

[node name="YouLost" type="Label" parent="EndScreen/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "You lost..."
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="EndScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "
Disconnecting in
6 seconds..."
horizontal_alignment = 1

[node name="Menu" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.5
offset_top = -105.5
offset_right = 120.5
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer2" type="HFlowContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hosting port"

[node name="HostPort" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "9999"
placeholder_text = "Port"
alignment = 1

[node name="HostButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Host Server"

[node name="Label" type="Label" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Container" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ToLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/Container"]
layout_mode = 2
text = "Server IP"
horizontal_alignment = 1

[node name="JoinAddress" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/Container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "localhost"
placeholder_text = "Server IP"
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PortLabel" type="Label" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Port"
horizontal_alignment = 1

[node name="JoinPort" type="LineEdit" parent="Menu/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "9999"
placeholder_text = "Port"
alignment = 1

[node name="JoinButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Server"

[node name="DisplayPublicIP" type="Label" parent="."]
offset_right = 158.0
offset_bottom = 26.0
metadata/_edit_lock_ = true
